Bug 1450847 - Fix view parameter class check in ReadableStreamBYOBRequest::constructor r=till